--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     background: #6300CB;
 }
 
+a{
+    text-decoration: none;
+}
+
 .heart-container{
     width: 100vw;
     height: 100vh;
@@ -18,6 +22,10 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.heart-subcontainer{
+    height: 120px;
 }
 
 .heart-shape{
@@ -30,6 +38,9 @@ body{
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
     background-color: rgb(253, 2, 2);
+    animation-name: latir;
+    animation-duration: 600ms;
+    animation-iteration-count: infinite;
 }
 .heart-shape:before,
 .heart-shape:after{
@@ -42,6 +53,9 @@ body{
     -o-border-radius: 50%;
     border-radius: 50%;
     background-color: rgb(253, 2, 2);
+    animation-name: latir;
+    animation-duration: 600ms;
+    animation-iteration-count: infinite;
 }
 .heart-shape:before{
     bottom: 0px;
@@ -52,6 +66,18 @@ body{
     right: 0px;
 }
 
+@keyframes latir{
+    from{
+        width: 100px;
+        height: 100px;
+    }
+
+    to{
+        width: 120px;
+        height: 120px;
+    }
+}
+
 
 .title_click{
     font-family: 'Josefin Sans', sans-serif;
@@ -59,4 +85,42 @@ body{
     margin: 50px 0px;
     font-size: 28px;
     text-shadow: 1px 1px 4px rgb(90, 90, 90);
+    cursor: pointer;
+}
+
+.panel-container{
+    width: 820px;
+}
+
+.panel_info{
+    display: none;
+    width: 100%;
+    height: 475px;
+    background: rgb(255, 229, 116);
+    box-shadow: 1px 1px 10px rgb(46, 46, 46);
+    /*
+    animation-name: desplegarPanel;
+    animation-duration: 500ms;*/
+}
+
+@keyframes desplegarPanel{
+    0%{
+        width: 0px;
+    }
+
+    25%{
+        width: 25%;
+    }
+
+    50%{
+        width: 50%;
+    }
+
+    75%{
+        width: 75%;
+    }
+
+    100%{
+        width: 100%;
+    }
 }
