--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ font-family: 'Josefin Sans', sans-serif;
 }
 
 body{
-    background: #6300CB;
+    background: url("img/background_body.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 a{
@@ -95,19 +97,39 @@ a{
 .panel_info{
     display: none;
     width: 100%;
-    height: 475px;
+    height: 550px;
     background: rgb(255, 229, 116);
     box-shadow: 1px 1px 10px rgb(46, 46, 46);
     /*
     animation-name: desplegarPanel;
     animation-duration: 500ms;*/
-    flex-direction: column;
     align-items: center;
 }
 
+.foto_container{
+    width: 50%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.info_container{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.texto_verso{
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 20px 0px;
+    text-align: center;
+    font-size: 20px;
+}
+
 .foto{
-    width: 60%;
-    height: 60%;
+    max-width: 65%;
+    box-shadow: 1px 1px 6px rgb(41, 41, 41);
 }
 
 @keyframes desplegarPanel{
